--- a/ManageProgressBar/ManageProgressBar.vbproj
+++ b/ManageProgressBar/ManageProgressBar.vbproj
@@ -4,6 +4,10 @@
     <RootNamespace>ManageProgressBar</RootNamespace>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
+    <OptionCompare>Text</OptionCompare>
+    <OptionExplicit>On</OptionExplicit>
+    <OptionInfer>Off</OptionInfer>
+    <OptionStrict>On</OptionStrict>
   </PropertyGroup>
 
   <ItemGroup>
