--- a/.editorconfig
+++ b/.editorconfig
@@ -145,29 +145,15 @@ csharp_space_between_square_brackets = false
 # Modifier preferences
 visual_basic_preferred_modifier_order = Partial,Default,Private,Protected,Public,Friend,NotOverridable,Overridable,MustOverride,Overloads,Overrides,MustInherit,NotInheritable,Static,Shared,Shadows,ReadOnly,WriteOnly,Dim,Const,WithEvents,Widening,Narrowing,Custom,Async:suggestion
 
-# C++ Files
-
 # CA1031: Do not catch general exception types
 dotnet_diagnostic.CA1031.severity = silent
 
 # CA1303: Do not pass literals as localized parameters
 dotnet_diagnostic.CA1303.severity = silent
 
-#[*.{cpp,h,in}]
-##curly_bracket_next_line = true
-#indent_brace_style = Allman
-
 # Xml project files
 [*.{csproj,vcxproj,vcxproj.filters,proj,nativeproj,locproj}]
 indent_size = 2
-
-# Xml build files
-#[*.builds]
-#indent_size = 2
-
-# Xml files
-#[*.{xml,stylecop,ruleset}]
-#indent_size = 2
 
 # Xml config files
 [*.{props,targets,config,nuspec}]
@@ -179,9 +165,6 @@ indent_size = 2
 charset = utf-8-bom
 insert_final_newline = true
 
-# Shell scripts
-#[*.sh]
-#end_of_line = lf
-#
+# batch files
 [*.{cmd,bat}]
 end_of_line = crlf
