--- a/CodeConverter/CodeConverter.vbproj
+++ b/CodeConverter/CodeConverter.vbproj
@@ -20,6 +20,12 @@
     <Version>3.0.0</Version>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="Resource1.Designer.vb" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Remove="Resource1.resx" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis" Version="3.4.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.8">
       <PrivateAssets>all</PrivateAssets>
@@ -30,19 +36,5 @@
   <ItemGroup>
     <ProjectReference Include="..\HashLibrary\HashLibrary.csproj" />
     <ProjectReference Include="..\ManageProgressBar\ManageProgressBar.vbproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Update="Resource1.Designer.vb">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resource1.resx</DependentUpon>
-    </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Update="Resource1.resx">
-      <CustomToolNamespace>My.Resources</CustomToolNamespace>
-      <Generator>PublicResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resource1.Designer.vb</LastGenOutput>
-    </EmbeddedResource>
   </ItemGroup>
 </Project>
