Complete rewrite of Tuple handling, moved Tuple and Identifier code to separate files. Minor cleanup to license files and file header cleanup.

--- a/CodeConverter/CodeConverter.vbproj
+++ b/CodeConverter/CodeConverter.vbproj
@@ -20,6 +20,7 @@
     <Version>3.0.0</Version>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="GlobalSuppressions.vb" />
     <Compile Remove="Resource1.Designer.vb" />
   </ItemGroup>
   <ItemGroup>
