--- a/.editorconfig
+++ b/.editorconfig
@@ -17,7 +17,7 @@ indent_size = 2
 # C# and VB files
 [*.{cs,vb}]
 charset = utf-8-bom
-insert_final_newline = true
+insert_final_newline = false
 trim_trailing_whitespace = true
 
 # avoid this. unless absolutely necessary
