Decouple some UI from the CodeConverter project and enable use from .NET Framework 4.8 (#2)
* Move MsgBox dependency out of code converter project

* Clarify source of information

* TextProgressBar is more specific of a thing than CodeConverter should be referencing

* Use standard System.IProgress interface to communicate progress

* Delete abstraction which is now unused

* Support net48 (this is needed in order to load some projects to obtain a semantic model)

--- a/CSharpToVB/CSharpToVB.vbproj
+++ b/CSharpToVB/CSharpToVB.vbproj
@@ -65,10 +65,10 @@
     <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="3.4.0" />
     <PackageReference Include="NuGet.Frameworks" Version="5.4.0" />
     <PackageReference Include="PInvoke.Windows.Core" Version="0.6.6" />
+    <PackageReference Include="VBMsgBox" Version="1.0.2" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CodeConverter\CodeConverter.vbproj" />
-    <ProjectReference Include="..\ManageProgressBar\ManageProgressBar.vbproj" />
   </ItemGroup>
 
   <ItemGroup>
