--- a/CodeConverter/CodeConverter.vbproj
+++ b/CodeConverter/CodeConverter.vbproj
@@ -16,8 +16,8 @@
     <Company>Travel By Paul</Company>
     <Product>VB Core Code Converter</Product>
     <RepositoryUrl>https://github.com/paul1956/CSharpToVB</RepositoryUrl>
-    <RepositoryType>GitHub</RepositoryType>
-    <Version>3.0.0</Version>
+    <RepositoryType>git</RepositoryType>
+    <Version>3.0.1</Version>
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="GlobalSuppressions.vb" />
