--- a/HashLibrary/HashLibrary.csproj
+++ b/HashLibrary/HashLibrary.csproj
@@ -5,4 +5,8 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Collections.Immutable" Version="1.7.0" />
+  </ItemGroup>
+
 </Project>
