--- a/CSharpToVB/CSharpToVB.vbproj
+++ b/CSharpToVB/CSharpToVB.vbproj
@@ -23,7 +23,7 @@
     <Description>Convert C# to VB, it can convert snippits, files, projects and folders. It expects valid C# code and does not handle bad code well.</Description>
     <RepositoryType>GitHub</RepositoryType>
     <ApplicationIcon>Icons\CStoVB.ico</ApplicationIcon>
-    <Version>4.1.0.3</Version>
+    <Version>4.2.0.0</Version>
     <Product>CSharp To VB Converter</Product>
     <Copyright>Copyright (c) .NET Foundation and Contributors</Copyright>
     <PackageId>CSharp To VB Converter</PackageId>
@@ -36,12 +36,6 @@
     <NoWarn />
     <WarningsAsErrors>41999,42016,42017,42018,42019,42020,42021,42022,42032,42036</WarningsAsErrors>
   </PropertyGroup>
-  <ItemGroup>
-    <Compile Remove="CLSIDGuid.vb" />
-    <Compile Remove="IgnoreErrorList.vb" />
-    <Compile Remove="OpenFolderDialog.vb" />
-    <Compile Remove="Settings.vb" />
-  </ItemGroup>
 
   <ItemGroup>
     <Import Include="System.Data" />
@@ -50,6 +44,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Buildalyzer" Version="2.5.1" />
+    <PackageReference Include="Buildalyzer.Workspaces" Version="2.5.1" />
     <PackageReference Include="Microsoft.Build.Locator" Version="1.2.6" />
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.0.0-beta2.20059.3">
       <PrivateAssets>all</PrivateAssets>
