--- a/CSharpToVB/CSharpToVB.vbproj
+++ b/CSharpToVB/CSharpToVB.vbproj
@@ -20,10 +20,10 @@
     <Authors>Paul M Cohen</Authors>
     <Company>Travel By Paul</Company>
     <RepositoryUrl>https://github.com/paul1956/CSharpToVB</RepositoryUrl>
-    <Description>Convert C# to VB, it can convert snippits, files, projects and folders. It expects valid C# code and does not handle bad code well.</Description>
+    <Description>Convert C# to VB, it can convert snippets, files, projects and folders. It expects valid C# code and does not handle bad code well.</Description>
     <RepositoryType>GitHub</RepositoryType>
     <ApplicationIcon>Icons\CStoVB.ico</ApplicationIcon>
-    <Version>4.2.6.0</Version>
+    <Version>4.2.7.0</Version>
     <Product>CSharp To VB Converter</Product>
     <Copyright>Copyright (c) .NET Foundation and Contributors</Copyright>
     <PackageId>CSharp To VB Converter</PackageId>
