--- a/CSharpToVB/CSharpToVB.vbproj
+++ b/CSharpToVB/CSharpToVB.vbproj
@@ -23,10 +23,11 @@
     <Description>Convert C# to VB, it can convert snippets, files, projects and folders.</Description>
     <RepositoryType>git</RepositoryType>
     <ApplicationIcon>Icons\CStoVB.ico</ApplicationIcon>
-    <Version>4.2.10.1</Version>
     <Product>CSharp To VB Converter</Product>
     <Copyright>Copyright (c) .NET Foundation and Contributors</Copyright>
     <PackageId>CSharp To VB Converter</PackageId>
+    <AssemblyVersion>4.3.0.0</AssemblyVersion>
+    <FileVersion>4.2.11.0</FileVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <NoWarn />
