--- a/CSharpToVB/CSharpToVB.vbproj
+++ b/CSharpToVB/CSharpToVB.vbproj
@@ -26,8 +26,8 @@
     <Product>CSharp To VB Converter</Product>
     <Copyright>Copyright (c) .NET Foundation and Contributors</Copyright>
     <PackageId>CSharp To VB Converter</PackageId>
-    <AssemblyVersion>4.3.0.4</AssemblyVersion>
-    <FileVersion>4.3.0.4</FileVersion>
+    <AssemblyVersion>4.3.1.0</AssemblyVersion>
+    <FileVersion>4.3.1.0</FileVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <NoWarn />
@@ -37,6 +37,13 @@
     <NoWarn />
     <WarningsAsErrors>41999,42016,42017,42018,42019,42020,42021,42022,42032,42036</WarningsAsErrors>
   </PropertyGroup>
+  <ItemGroup>
+    <Compile Remove="VSSelectorDialog.Designer.vb" />
+    <Compile Remove="VSSelectorDialog.vb" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Remove="VSSelectorDialog.resx" />
+  </ItemGroup>
 
   <ItemGroup>
     <Import Include="System.Data" />
@@ -59,7 +66,6 @@
     </PackageReference>
     <PackageReference Include="Microsoft.CodeAnalysis.VisualBasic" Version="3.5.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.VisualBasic.Workspaces" Version="3.5.0" />
-    <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="3.5.0" />
     <PackageReference Include="Microsoft.Win32.Registry" Version="4.7.0" />
     <PackageReference Include="NuGet.Frameworks" Version="5.5.1" />
     <PackageReference Include="PInvoke.Windows.Core" Version="0.6.6" />
