--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,3 @@
-# Suppress: EC112
 # editorconfig.org
 
 # top-most EditorConfig file
@@ -17,7 +16,7 @@ indent_size = 2
 # C# and VB files
 [*.{cs,vb}]
 charset = utf-8-bom
-insert_final_newline = false
+insert_final_newline = true
 trim_trailing_whitespace = true
 
 file_header_template= Licensed to the .NET Foundation under one or more agreements.\nThe .NET Foundation licenses this file to you under the MIT license.\nSee the LICENSE file in the project root for more information.
@@ -158,6 +157,14 @@ dotnet_diagnostic.CA1303.severity = silent
 [*.{csproj,vcxproj,vcxproj.filters,proj,nativeproj,locproj}]
 indent_size = 2
 
+# Xml build files
+[*.builds]
+indent_size = 2
+
+# Xml files
+[*.{xml,stylecop,ruleset}]
+indent_size = 2
+
 # Xml config files
 [*.{props,targets,config,nuspec}]
 indent_size = 2
@@ -168,6 +175,9 @@ indent_size = 2
 charset = utf-8-bom
 insert_final_newline = true
 
-# batch files
+# Shell scripts
+[*.sh]
+end_of_line = lf
+
 [*.{cmd,bat}]
 end_of_line = crlf
