--- a/HashLibrary/HashLibrary.csproj
+++ b/HashLibrary/HashLibrary.csproj
@@ -6,6 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Collections\SpecializedCollections.cs" />
+    <Compile Remove="Collections\SpecializedTasks.cs" />
+    <Compile Remove="PooledObjects\PooledDictionary.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="System.Collections.Immutable" Version="1.7.0" />
   </ItemGroup>
 
