--- a/CSharpToVB/CSharpToVB.vbproj
+++ b/CSharpToVB/CSharpToVB.vbproj
@@ -14,20 +14,20 @@
   <PropertyGroup>
     <LangVersion>16</LangVersion>
     <AssemblyName>CSharpToVBApp</AssemblyName>
-    <AssemblyTitle>C# To VB Converter</AssemblyTitle>
+    <AssemblyTitle>C# To Visual Basic Converter</AssemblyTitle>
     <ApplicationManifest>My Project\app.manifest</ApplicationManifest>
     <NeutralLanguage>en-US</NeutralLanguage>
     <Authors>Paul M Cohen</Authors>
     <Company>Travel By Paul</Company>
     <RepositoryUrl>https://github.com/paul1956/CSharpToVB</RepositoryUrl>
-    <Description>Convert C# to VB, it can convert snippets, files, projects and folders.</Description>
+    <Description>Convert C# to Visual Basic, it can convert snippets, individual files, folders, projects, and solutions.</Description>
     <RepositoryType>git</RepositoryType>
     <ApplicationIcon>Icons\CStoVB.ico</ApplicationIcon>
     <Product>CSharp To VB Converter</Product>
     <Copyright>Copyright (c) .NET Foundation and Contributors</Copyright>
     <PackageId>CSharp To VB Converter</PackageId>
-    <AssemblyVersion>4.4.0.3</AssemblyVersion>
-    <FileVersion>4.4.0.3</FileVersion>
+    <AssemblyVersion>4.4.0.4</AssemblyVersion>
+    <FileVersion>4.4.0.4</FileVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <NoWarn />
