--- a/.editorconfig
+++ b/.editorconfig
@@ -153,6 +153,10 @@ dotnet_diagnostic.CA1031.severity = silent
 # CA1303: Do not pass literals as localized parameters
 dotnet_diagnostic.CA1303.severity = silent
 
+# CA1308: Do not pass literals as localized parameters
+dotnet_diagnostic.CA1308.severity = suggestion
+
+
 # Xml project files
 [*.{csproj,vcxproj,vcxproj.filters,proj,nativeproj,locproj}]
 indent_size = 2
