--- a/.editorconfig
+++ b/.editorconfig
@@ -37,7 +37,6 @@ dotnet_style_require_accessibility_modifiers = for_non_interface_members:silent
 # avoid this. unless absolutely necessary
 dotnet_style_qualification_for_field = false:suggestion
 dotnet_style_qualification_for_property = false:suggestion
-dotnet_style_qualification_for_method = false:suggestion
 dotnet_style_qualification_for_event = false:suggestion
 # use language keywords instead of BCL types
 dotnet_style_predefined_type_for_locals_parameters_members = true:suggestion
@@ -87,6 +86,7 @@ dotnet_style_null_propagation = true:suggestion
 
 # C# files
 [*.cs]
+dotnet_style_qualification_for_method = false:suggestion
 csharp_indent_case_contents_when_block = true
 csharp_preferred_modifier_order = public,private,protected,internal,static,extern,new,virtual,abstract,sealed,override,readonly,unsafe,volatile,async:suggestion
 csharp_prefer_braces = true:silent
@@ -115,7 +115,6 @@ csharp_indent_labels = one_less_than_current
 csharp_style_var_for_built_in_types = false:none
 csharp_style_var_when_type_is_apparent = false:none
 csharp_style_var_elsewhere = false:suggestion
-
 
 # Code style defaults
 csharp_preserve_single_line_blocks = true
@@ -166,6 +165,7 @@ csharp_space_between_square_brackets = false
 [*.vb]
 # Modifier preferences
 visual_basic_preferred_modifier_order = Partial,Default,Private,Protected,Public,Friend,NotOverridable,Overridable,MustOverride,Overloads,Overrides,MustInherit,NotInheritable,Static,Shared,Shadows,ReadOnly,WriteOnly,Dim,Const,WithEvents,Widening,Narrowing,Custom,Async:suggestion
+dotnet_style_qualification_for_method = true:warning
 
 # CA1031: Do not catch general exception types
 dotnet_diagnostic.CA1031.severity = silent
