--- a/CodeConverter/CodeConverter.vbproj
+++ b/CodeConverter/CodeConverter.vbproj
@@ -20,7 +20,7 @@
     <FileVersion>3.4.6.0</FileVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Remove="CSharpToVB\BodyVisitor.vb" />
+    <Compile Remove="CSharpToVBVisitors\BodyVisitor.vb" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis" Version="3.6.0" />
