--- a/CSharpToVB.Tests/CSharpToVB.Tests.vbproj
+++ b/CSharpToVB.Tests/CSharpToVB.Tests.vbproj
@@ -18,6 +18,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="My Project\Settings.Designer.vb" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="My Project\Settings.settings" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="1.3.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
@@ -58,12 +66,6 @@
 
   <ItemGroup>
     <Folder Include="TestResults\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="My Project\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-    </None>
   </ItemGroup>
 
 </Project>
