Move ProgressReport to separate Project, fix missing MatchCase CheckBox

--- a/CSharpToVB.Tests/CSharpToVB.Tests.vbproj
+++ b/CSharpToVB.Tests/CSharpToVB.Tests.vbproj
@@ -60,6 +60,7 @@
   <ItemGroup>
     <ProjectReference Include="..\CodeConverter\CodeConverter.vbproj" />
     <ProjectReference Include="..\CSharpToVB\CSharpToVB.vbproj" />
+    <ProjectReference Include="..\ProgressReportLibrary\ProgressReportLibrary.vbproj" />
   </ItemGroup>
 
   <ItemGroup>
