--- a/CSharpToVB.Tests/CSharpToVB.Tests.vbproj
+++ b/CSharpToVB.Tests/CSharpToVB.Tests.vbproj
@@ -15,6 +15,7 @@
     <RepositoryUrl>https://github.com/paul1956/CSharpToVB</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <Version>1.0.1</Version>
+    <Copyright>Copyright (c) .NET Foundation and Contributors</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
