--- a/ProgressReportLibrary/ProgressReportLibrary.vbproj
+++ b/ProgressReportLibrary/ProgressReportLibrary.vbproj
@@ -1,8 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <RootNamespace>ProgressReportLibrary</RootNamespace>
     <TargetFrameworks>netcoreapp3.1;net48</TargetFrameworks>
+    <Authors>Paul M Cohen</Authors>
+    <Company>Travel by Paul</Company>
+    <Copyright>Copyright (c) .NET Foundation and Contributors</Copyright>
+    <RepositoryUrl>https://github.com/paul1956/CSharpToVB</RepositoryUrl>
+    <RepositoryType>Git</RepositoryType>
+    <NeutralLanguage>en-US</NeutralLanguage>
   </PropertyGroup>
 
 </Project>
