Provide some support for new C# features see ReadMe.MD for details. Upgrade NuGet libraries.

--- a/CSharpToVB/CSharpToVB.vbproj
+++ b/CSharpToVB/CSharpToVB.vbproj
@@ -49,23 +49,24 @@
   <ItemGroup>
     <PackageReference Include="Buildalyzer" Version="3.0.1" />
     <PackageReference Include="Buildalyzer.Workspaces" Version="3.0.1" />
+    <PackageReference Include="Microsoft.CodeAnalysis" Version="3.8.0-4.final" />
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="3.8.0-3.final" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="3.8.0-3.final" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="3.8.0-4.final" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="3.8.0-4.final" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.CodeAnalysis.VisualBasic" Version="3.8.0-3.final" />
-    <PackageReference Include="Microsoft.CodeAnalysis.VisualBasic.Workspaces" Version="3.8.0-3.final" />
-    <PackageReference Include="Microsoft.Win32.Registry" Version="5.0.0-rc.1.20451.14" />
+    <PackageReference Include="Microsoft.CodeAnalysis.VisualBasic" Version="3.8.0-4.final" />
+    <PackageReference Include="Microsoft.CodeAnalysis.VisualBasic.Workspaces" Version="3.8.0-4.final" />
+    <PackageReference Include="Microsoft.Win32.Registry" Version="5.0.0-rc.2.20475.5" />
     <PackageReference Include="NuGet.Frameworks" Version="5.8.0-preview.3.6823" />
-    <PackageReference Include="PInvoke.Windows.Core" Version="0.6.49" />
-    <PackageReference Include="System.Collections.Immutable" Version="5.0.0-rc.1.20451.14" />
-    <PackageReference Include="System.Reflection.Metadata" Version="5.0.0-rc.1.20451.14" />
+    <PackageReference Include="PInvoke.Windows.Core" Version="0.7.78" />
+    <PackageReference Include="System.Collections.Immutable" Version="5.0.0-rc.2.20475.5" />
+    <PackageReference Include="System.Reflection.Metadata" Version="5.0.0-rc.2.20475.5" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.1'">
     <PackageReference Include="VBMsgBox" Version="1.0.2" />
