Update .NET Analyzers and fix issues found in Tests

--- a/CSharpToVB/CSharpToVB.vbproj
+++ b/CSharpToVB/CSharpToVB.vbproj
@@ -28,6 +28,7 @@
     <AssemblyVersion>5.0.0.11</AssemblyVersion>
     <FileVersion>5.0.0.11</FileVersion>
     <EnableNETAnalyzers>true</EnableNETAnalyzers>
+    <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <NoWarn />
