Lots of formatting fixes to comply with .editorConfig.Fix corner case with converting Dictionary types, add support for display of Shortcut keys on Edit menu items.

--- a/CSharpToVB.Tests/CSharpToVB.Tests.vbproj
+++ b/CSharpToVB.Tests/CSharpToVB.Tests.vbproj
@@ -17,8 +17,9 @@
     <Copyright>Copyright (c) .NET Foundation and Contributors</Copyright>
     <EnableNETAnalyzers>true</EnableNETAnalyzers>
     <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
-    <AssemblyVersion>5.0.0.1</AssemblyVersion>
-    <FileVersion>5.0.0.1</FileVersion>
+    <AssemblyVersion>5.0.0.2</AssemblyVersion>
+    <FileVersion>5.0.0.2</FileVersion>
+    <Product>CSharp To VB Tests</Product>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="1.3.0">
