--- a/ProgressReportLibrary/ProgressReportLibrary.vbproj
+++ b/ProgressReportLibrary/ProgressReportLibrary.vbproj
@@ -13,6 +13,7 @@
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <FileVersion>1.0.0.0</FileVersion>
     <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
+    <Product>Progress Report Library</Product>
   </PropertyGroup>
 
 </Project>
